2009-11-14 Roman
- !!:FIX:SYS.Res: Timeouted resource lock and deadlock control is fixed.
- UI.QTCfg, UI.Vision: The popup calendar is enabled for Date and DateTime enter fields.


2009-11-13 Roman
- FIX:DAQ.JavaLikeCalc: Prevent to recompile equal functions is set.
- FIX:UI.VCAEngine: Lock run session is fixed on time self page close.


2009-11-12 Roman
- DAQ.ICP_DAS: The module I-8017 hang on fast acquisition detect is added.
- FIX:UI.VCAEngine: Attributes type changing fix is return to back by wrong fix cause.


2009-11-11 Roman
- FIX:DAQ.ModBus: ModBUS block's resource missing cause crash is fixed.
- !:SYS: Multiply start preventing is added to demo-start and user-start scripts.
- !!:SYS: User's API functions is added to OpenSCADA core object: system(), message(), XMLNode() and cntrReq().
- !!!!:SYS.Function, DAQ.BlockCalc, DAQ.LogicLev, UI.VCAEngine: To check the parameters modify controll is added.
- !!:DB: User's API functions SQLReq() is added to DB object.
- !!:Archives: User's API function messGet() is added to Archive subsystem object.
- FIX:UI.VCAEngine: Attributes type change is fixed for Mutable attributes of primitives "Text" and "FormEl".
- FIX:UI.VCAEngine: Error message is added on time creation atribute with already present name.


2009-11-10 Maxim
- UI.Vision, UI.WebVision: Additional event by the mouse click to the any "fill" is added for the primitive ElFigure.


2009-11-09 Roman
- DAQ.JavaLikeCalc: Start point for system's objects is changed to symbol "SYS".
- DAQ.ModBus: Error code into status is added for connection lost detect.


2009-11-06 Roman
- FIX:DAQ.DAQGate: True status show is fixed on time connection try.
- DAQ.ICP_DAS: Fast task priority is rised to 32.
- Protocol.SelfSystem: Strong timeout set is removed for output transport's request.
- UI.VCAEngine: Object's functions of user's API is added: user(), alrmSndPlay() and alrmQuittance().


2009-11-05 Roman