@@ -385,7 +385,6 @@ void Block::calc( bool first, bool last )
     //> Calc function
     try
     {
-	TValFunc::setMdfChk( true );
 	TValFunc::calc( );
 	modif();
     }
@@ -396,8 +395,6 @@ void Block::calc( bool first, bool last )
     try
     {
 	for( unsigned i_ln=0; i_ln < m_lnk.size(); i_ln++ )
-	{
-	    if( !ioMdf(i_ln) ) continue;
 	    switch( m_lnk[i_ln].tp )
 	    {
 		case O_LOC: case O_GLB:
@@ -421,7 +418,6 @@ void Block::calc( bool first, bool last )
 			}
 		    break;
 	    }
-	}
     }catch(TError err)
     {
 	err_cnt++;
